[package]
name = "advent-of-code-2020"
version = "0.0.1"
authors = ["Chris Paterson <chris.paterson@metaswitch.com>"]
description = "My implementation of the Advent of Code 2020 in Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ThePants999/advent-of-code-2020"
keywords = ["advent of code","aoc","2020"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"